codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__final_reasoning_then_message_without_deltas_are_rendered.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: combined
---
• Here is the result.
