codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__image_generation_call_history_snapshot.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: combined
---
• Generated Image:
  └ A tiny blue square
  └ Saved to: file:///tmp/ig-1.png
