codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__interrupt_exec_marks_failed.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: exec_blob
---
• Ran sleep 1
  └ (no output)
